--- a/homeassistant/components/cover/manifest.json
+++ b/homeassistant/components/cover/manifest.json
@@ -2,6 +2,7 @@
   "domain": "cover",
   "name": "Cover",
   "codeowners": ["@home-assistant/core"],
+  "dependencies": ["rasc"],
   "documentation": "https://www.home-assistant.io/integrations/cover",
   "integration_type": "entity",
   "quality_scale": "internal"
