--- a/homeassistant/components/fan/manifest.json
+++ b/homeassistant/components/fan/manifest.json
@@ -2,6 +2,7 @@
   "domain": "fan",
   "name": "Fan",
   "codeowners": ["@home-assistant/core"],
+  "dependencies": ["rasc"],
   "documentation": "https://www.home-assistant.io/integrations/fan",
   "integration_type": "entity",
   "quality_scale": "internal"
