--- a/homeassistant/components/switch/manifest.json
+++ b/homeassistant/components/switch/manifest.json
@@ -3,6 +3,7 @@
   "name": "Switch",
   "after_dependencies": ["switch_as_x"],
   "codeowners": ["@home-assistant/core"],
+  "dependencies": ["rasc"],
   "documentation": "https://www.home-assistant.io/integrations/switch",
   "integration_type": "entity",
   "quality_scale": "internal"
