--- a/homeassistant/components/virtual/manifest.json
+++ b/homeassistant/components/virtual/manifest.json
@@ -3,6 +3,7 @@
   "name": "Virtual Components",
   "codeowners": ["@twrecked"],
   "config_flow": true,
+  "dependencies": ["rasc"],
   "documentation": "https://github.com/twrecked/hass-virtual/blob/master/README.md",
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/twrecked/hass-virtual/issues"
