trigger routines from arrival dataset + fix metrics + compare reschedulers

--- a/config/rasc_debug.yaml
+++ b/config/rasc_debug.yaml
@@ -9,7 +9,7 @@ optimal_schedule_metric: "min_avg_rtn_latency"
 rescheduling_window: 30
 routine_priority_policy: "earliest" # from shortest, longest, earliest, latest
 record_results: true
-routine_arrival_filename: "datasets/arrival.csv"
+routine_arrival_filename: "arrival_debug.csv"
 # rescheduling_estimation: true
 # rescheduling_accuracy: "reschedule_all"
 # mthresh: 1
