--- a/config/rasc_debug.yaml
+++ b/config/rasc_debug.yaml
@@ -1,5 +1,5 @@
 scheduling_policy: "tl" # from tl, jit, fcfs, fcfs_post
-rescheduling_policy: "sjfw" # from sjfw, sjfwo, optimalw, optimalwo, rv, early_start, none
+rescheduling_policy: "none" # from sjfw, sjfwo, optimalw, optimalwo, rv, early_start, none
 rescheduling_trigger: "proactive" # from reactive, anticipatory, proactive
 optimal_schedule_metric: "min_avg_rtn_latency"
 # from min_length, min_avg_rtn_wait_time, min_p95_rtn_wait_time,
