--- a/config/rasc_debug.yaml
+++ b/config/rasc_debug.yaml
@@ -10,6 +10,7 @@ rescheduling_window: 30
 routine_priority_policy: "earliest" # from shortest, longest, earliest, latest
 record_results: true
 routine_arrival_filename: "arrival_morning.csv"
+overhead_measurement: true
 # rescheduling_estimation: true
 # rescheduling_accuracy: "reschedule_all"
 # mthresh: 1
